[editor-common] fix(MediaItemErrorMsg): simplify component and z-index removal

--- a/packages/editor-common/web/statics/styles/media-item-error-msg.scss
+++ b/packages/editor-common/web/statics/styles/media-item-error-msg.scss
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 6000;
   }
   
   .errorIcon{
